# xflags

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  cflags-internal.h  cflags.cc  cflags.h  cflags_after.cc  cflags_before.cc  configure.ac  example.cc  test.cc  xflags-complete.cc  xflags.3  xflags.cc  xflags.h  xflags.pc.in  xflags_after.cc  xflags_before.cc
